business context hirearchy image

--- a/content/appendix-A-snimky.tex
+++ b/content/appendix-A-snimky.tex
@@ -1,6 +1,6 @@
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{Snímky ukázkové aplikace a centrální administrace}
+\chapter{Přehledové obrázky a snímky}
 
 \begin{figure}[H]
     \centering
@@ -15,3 +15,10 @@
     \caption{Formulář pro vytvoření nebo úpravu byznysového kontextu v centrální administraci}
     \label{fig:screenshot-context-edit}
 \end{figure}
+
+\begin{sidewaysfigure}[ht]
+    \centering
+    \includegraphics[keepaspectratio=true, width=\linewidth]{figures/example-system-context-hierarchy.pdf}
+    \caption{Diagram hirearchie byznysových kontextů ukázkového systému}
+    \label{fig:example-system-context-hirearchy}
+\end{sidewaysfigure}
