--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -202,6 +202,12 @@ vidíme, na které užitné případy se pravidlo aplikuje, a jaký je typ pravi
     \label{tbl:business-rules}
 \end{table}
 
+% TODO: seznam business contexts
+
+Na obrázku~\ref{fig:example-system-context-hirearchy} můžeme vidět vizualizaci
+hirearchie byznysových kontextů v ukázkovém systému, jejich vazbu na UC a také byznysová
+pravidla, která se v kontextech aplikují.
+
 \subsection{Služby}
 
 Na obrázku~\ref{fig:example-system} můžeme vidět komponenty systému a jejich závislosti.
