--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -45,6 +45,10 @@ unicode=true,
 \usepackage{blindtext}
 \usepackage{multirow}
 \usepackage{makecell}
+\usepackage{wrapfig}
+\usepackage{lscape}
+\usepackage{rotating}
+\usepackage{epstopdf}
 
 % custom macros
 \usepackage{custom}
