--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -1,13 +1,22 @@
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+%\usepackage[T1]{fontenc}
+%\usepackage[utf8]{inputenc}
 
 %!TEX ROOT=../diploma-thesis.tex
 
 \chapter{Návrh}\label{ch:navrh}
 
+V této kapitole ...
+
 \section{Formalizace architektury orientované na služby}
 
 \subsection{Join-points}
+
+\begin{figure}
+    \centering
+    \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/join-points.pdf}
+    \caption{Diagram životního cyklu služby a identifikovaných join-pointů}
+    \label{fig:join-points}
+\end{figure} % TODO: popsat
 
 \subsection{Advices}
 
@@ -26,13 +35,41 @@ byznysový kontext.
 
 \section{Metamodel byznys kontextu}\label{sec:metamodel}
 
+\begin{figure}
+    \centering
+    \includegraphics[keepaspectratio=true, width=\linewidth]{figures/business-context-metamodel.pdf}
+    \caption{Diagram tříd metamodelu byznysového kontextu}
+    \label{fig:business-context-metamodel}
+\end{figure} % TODO: popsat
+
 \section{Expression}
 
 \section{Registr byznys kontextů}
 
+\begin{figure}
+    \centering
+    \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/business-context-loading.pdf}
+    \caption{Diagram procesu inicializace byznysových kontextů}
+    \label{fig:business-context-loading}
+\end{figure} % TODO: popsat
+
 \section{Byznys kontext weaver}
 
+\begin{figure}
+    \centering
+    \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/business-rules-weaver.pdf}
+    \caption{Diagram aktivit weaverů byznysových pravidel}
+    \label{fig:business-rules-weaver}
+\end{figure} % TODO: popsat
+
 \section{Centrální správa byznys kontextů}
+
+\begin{figure}
+    \centering
+    \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/business-context-management.pdf}
+    \caption{Diagram procesu centrální správy byznysových kontextů}
+    \label{fig:business-context-management}
+\end{figure} % TODO: popsat
 
 \subsection{Uložení rozšířeného pravidla}
 
