--- a/content/appendix-C-zkratky.tex
+++ b/content/appendix-C-zkratky.tex
@@ -2,6 +2,8 @@
 
 \chapter{Seznam použitých zkratek}\label{ch:shortcuts}
 
+\printglossary[type=\acronymtype]
+
 \begin{description}[align=left]
     \item [ADDA] Aspect-Driven Design Approach
     \item [API] Application Programming Interface
@@ -24,6 +26,7 @@
     \item [OOP] Object Oriented Programming (Objektově orientované programování)
     \item [REST] Representational State Transfer
     \item [RPC] Remote Procedure Call
+    \item [SLOC] Source Lines of Code
     \item [SOA] Service Oriented Architecture
     \item [SOAP] Simple Object Access Protocol
     \item [UC] Use Case
