--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -87,7 +87,9 @@ kvalitnější a lépe srozumitelnou dokumentaci.
 
 \lstinputlisting[
 caption={Část definice schématu zpráv byznys kontextů v jazyce Protobuffer},
-label={lst:protobuf-example},language=Protobuf,
+label={lst:protobuf-example},
+language=protobuf2,
+style=protobuf,
 frame=single,
 float,
 floatplacement=H
@@ -123,7 +125,8 @@ který umožňuje svému klientovi volat metody \code{FetchContexts()},
 \lstinputlisting[
 caption={Definice služby pro komunikaci byznys kontextů pro gRPC},
 label={lst:grpc-example},
-language=Protobuf,
+language=protobuf2,
+style=protobuf,
 frame=single,
 float,
 floatplacement=H
