--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -1,5 +1,5 @@
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+%\usepackage[T1]{fontenc}
+%\usepackage[utf8]{inputenc}
 
 %!TEX ROOT=../diploma-thesis.tex
 
@@ -60,11 +60,11 @@ vyplněno jméno, ale emailová adresa ne.
 \lstinputlisting[
 caption={Příklad jednotkového testu knihovny pro jazyk Python s využitím nástroje Unittest},
 label={lst:python-testing},
-language=python,
+language=Python,
 frame=single,
 float,
 floatplacement=H,
-basicstyle=\tiny
+basicstyle=\small
 ]
 {code/test_example.py}
 
@@ -275,7 +275,7 @@ a přidává vrstvy s prototypem knihovny našeho frameworku pro platformu Node.
 \lstinputlisting[
 caption={Ukázka zápisu Docker image obsahující knihovnu pro platformu Node.js},
 label={lst:docker-image},
-language=text,
+language=Dockerfile,
 frame=single,
 float,
 floatplacement=H
