--- a/content/appendix-D-cd.tex
+++ b/content/appendix-D-cd.tex
@@ -1,5 +1,5 @@
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+%\usepackage[T1]{fontenc}
+%\usepackage[utf8]{inputenc}
 
 %!TEX ROOT=../diploma-thesis.tex
 
