even better code

--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -90,9 +90,9 @@ caption={Část definice schématu zpráv byznys kontextů v jazyce Protobuffer}
 label={lst:protobuf-example},
 language=protobuf2,
 style=protobuf,
-frame=single,
-float,
-floatplacement=H
+%frame=single,
+%float,
+%floatplacement=H
 ]{code/protobuffer_example.proto}
 
 Zdrojový kód~\ref{lst:protobuf-example} znázorňuje část zápisu schématu
@@ -127,9 +127,9 @@ caption={Definice služby pro komunikaci byznys kontextů pro gRPC},
 label={lst:grpc-example},
 language=protobuf2,
 style=protobuf,
-frame=single,
-float,
-floatplacement=H
+%frame=single,
+%float,
+%floatplacement=H
 ]
 {code/grpc_example.proto}
 
@@ -212,9 +212,9 @@ vývojového procesu.
 caption={Příklad zápisu byznys kontextu v jazyce XML},
 label={lst:business-context-xml},
 language=XML,
-frame=single,
-float,
-floatplacement=H
+%frame=single,
+%float,
+%floatplacement=H
 ]
 {code/business_context.xml}
 
@@ -243,9 +243,9 @@ floatplacement=H
 caption={Označení operačního kontextu a jeho parametrů pomocí anotací Java knihovny},
 label={lst:business-operation-aspectj},
 language=Java,
-frame=single,
-float,
-floatplacement=H
+%frame=single,
+%float,
+%floatplacement=H
 ]
 {code/business_operation_aspectj.java}
 
@@ -321,9 +321,9 @@ injection container.
 caption={Příklad použití dekorátorů pro weaving v jazyce Python},
 label={lst:python-weaving-example},
 language=Python,
-frame=single,
-float,
-floatplacement=H
+%frame=single,
+%float,
+%floatplacement=H
 ]
 {code/python_weaving.py}
 
@@ -375,9 +375,9 @@ na lidskou chybu.
 caption={Příklad dekorace funkce v JavaScriptu pro aplikaci weavingu},
 label={lst:nodejs-weaving},
 language=JavaScript,
-frame=single,
-float,
-floatplacement=H
+%frame=single,
+%float,
+%floatplacement=H
 ]
 {code/nodejs_weaving.js}
 
