--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -33,10 +33,7 @@ pravděpodobnost regrese a dlouhodobě se zvýšila celková kvalita kódu.
 caption={Příklad jednotkového testu knihovny pro jazyk Java s využitím nástroje JUnit 4},
 label={lst:java-testing},
 language=Java,
-frame=single,
-float,
-floatplacement=H,
-basicstyle=\tiny
+%frame=single
 ]
 {code/test_example.java}
 
@@ -61,10 +58,7 @@ vyplněno jméno, ale emailová adresa ne.
 caption={Příklad jednotkového testu knihovny pro jazyk Python s využitím nástroje Unittest},
 label={lst:python-testing},
 language=Python,
-frame=single,
-float,
-floatplacement=H,
-basicstyle=\small
+%frame=single
 ]
 {code/test_example.py}
 
@@ -91,10 +85,7 @@ znázorňuje použití knihoven k ověření správné funkcionality výrazu \co
 caption={Příklad jednotkového testu knihovny pro platformu Node.js s využitím nástroje Mocha a Chai},
 label={lst:nodejs-testing},
 language=JavaScript,
-frame=single,
-float,
-floatplacement=H,
-basicstyle=\tiny
+%frame=single
 ]
 {code/test_example.js}
 
@@ -248,9 +239,7 @@ požadavku na výpis všech produktů.
 caption={Ukázka využití frameworku Flask pro účely product service},
 label={lst:product-service-flask},
 language=Python,
-frame=single,
-float,
-floatplacement=H
+%frame=single,
 ]
 {code/product_service.py}
 
@@ -276,9 +265,7 @@ a přidává vrstvy s prototypem knihovny našeho frameworku pro platformu Node.
 caption={Ukázka zápisu Docker image obsahující knihovnu pro platformu Node.js},
 label={lst:docker-image},
 language=Dockerfile,
-frame=single,
-float,
-floatplacement=H
+%frame=single,
 ]
 {code/dockerfile_nodejs.txt}
 
@@ -295,12 +282,10 @@ aby Docker Compose mohl spustit služby ve správném pořadí. Nakonec pomocí 
 pro konfigurační soubory, díky jeho snadné čitelnosti pro člověka a jednoduchému používání.
 
 \lstinputlisting[
-caption={Ukázka zápisu více-kontejnerové aplikace pomocí Docker Compose ve formátu YAML},
+caption={Ukázka zápisu více-kontejnerové aplikace pro Docker Compose},
 label={lst:docker-compose},
 language=Yaml,
-frame=single,
-float,
-floatplacement=H
+%frame=single,
 ]
 {code/docker_compose.yml}
 
